--- a/CalculatorTests/CalculatorTests.csproj
+++ b/CalculatorTests/CalculatorTests.csproj
@@ -13,4 +13,7 @@
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Tests.cs" />
+  </ItemGroup>
 </Project>
